# solidity-ai-pipeline

./: .coverage  .gitignore  .shellcheckrc  .solai.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  Makefile.inc  README.md  constraints.txt  hashed_constraints.txt  pyproject.toml  requirements.txt  swe.yaml  temp_diff  temp_diff2
.github/actions/build-wheel/: action.yml
.github/actions/toolchain/: action.yml
.github/scripts/: verify-lockfile.sh
.github/swe-agent-configs/: phase3_hello_world.yaml
.github/workflows/: ci.yml  orchestrator.yml  solai.yml
bootstrap/: install_python_env.sh
ci/: install_ci_tools.sh  phase3.sh  verify_lock.sh
scripts/: setup_stub_pkgs.py  verify_sweagent_setup.py
specs/: phase1_summary.md  phase2_summary.md  phase3_FAQ.md  phase3_summary.md
src/solai/: __init__.py  cli.py  runner.py
src/solai/docker/: foundry_sol.Dockerfile
src/solai/templates/: Makefile.inc  dot_solai.yaml  gitignore_snip.txt
tests/: test_runner.py  test_setup_stub_pkgs.py
venv311/: pyvenv.cfg
