[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name            = "solai"
version         = "0.4.2"
description     = "Plug-and-play AI improvement pipeline for Solidity projects"
readme          = "README.md"
requires-python = ">=3.12"
license         = {text = "MIT"}
authors         = [{name = "SoloLabs"}]
dependencies    = [
  "typer>=0.12",
  "rich>=13",
  "pyyaml>=6",
  # AI dependencies are now provided via the [ai] extra below
]

[tool.hatch.build]
# Tell Hatchling that our code lives under `src/`
package-dir = { "" = "src" }
# Include both src and solai packages
packages    = ["src", "solai"]

[project.scripts]
solai = "solai.cli:app"

[project.optional-dependencies]
ai = [
  # install latest SWE-Agent from GitHub
  "sweagent @ git+https://github.com/princeton-nlp/SWE-agent.git@main#egg=sweagent",
  # install latest SWE-ReX from GitHub
  "swe-rex @ git+https://github.com/SWE-agent/SWE-ReX.git@main#egg=swe-rex",
]

[tool.hatch.metadata]
allow-direct-references = true 